--- a/src/UI/About.xaml
+++ b/src/UI/About.xaml
@@ -30,7 +30,7 @@
             </Grid.ColumnDefinitions>
 
             <!-- LOGO -->
-            <Path Width="20" Height="20" Margin="6,-1,2,0" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Info}"/>
+            <Path Margin="6,0,2,0" Style="{StaticResource Style.Icon}" Data="{StaticResource Icon.Info}"/>
 
             <!-- Title -->
             <Label Grid.Column="1" Content="ABOUT" FontWeight="Light"/>
